--- a/Calculator.Tests/CalculatorTests.csproj
+++ b/Calculator.Tests/CalculatorTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Module.16.HW\Module.16.HW.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
